feat: relatorio de veiculo

--- a/login/templates/login/create_user.html
+++ b/login/templates/login/create_user.html
@@ -6,7 +6,7 @@
   <form method="post">
     {% csrf_token %} {{ form.as_p }}
     <div class="text-center mt-3">
-      <button type="submit" class="btn btn-success">Cadastrar</button>
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
     </div>
   </form>
 </div>
