--- a/vehicles/templates/vehicles/index.html
+++ b/vehicles/templates/vehicles/index.html
@@ -1,10 +1,6 @@
 {% extends "base/base.html" %} {% block content %}
 <div class="container mt-5">
-  <form
-    class="form-inline d-flex me-2 mb-5"
-    method="get"
-    style="min-width: 1300px; max-width: 500px"
-  >
+  <form class="form-inline d-flex me-2 mb-5" method="get">
     <div class="position-relative w-50 me-2">
       <input
         class="form-control ps-5 rounded-pill"
