--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -10,7 +10,7 @@
     <input
       class="form-control ps-5 rounded-pill"
       type="search"
-      placeholder="Modelo ou placa"
+      placeholder="Modelo ou Placa"
       aria-label="Buscar"
       name="search"
       value="{{ query|default:'' }}"
