--- a/reservation/templates/reservations/list_reservations.html
+++ b/reservation/templates/reservations/list_reservations.html
@@ -19,7 +19,7 @@
       <i class="bi bi-search text-muted"></i>
     </span>
   </div>
-  <button class="btn btn-outline-primary" type="submit">Buscar</button>
+  <button class="btn btn-outline-primary me-2" type="submit">Buscar</button>
   {% if query %}
   
     <a href="{% url 'list_reservations' %}" class="btn btn-outline-secondary">Limpar</a>
